gitea/k8s-manual/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
  labels:
    app: gitea
spec:
  type: NodePort
  selector:
    app: gitea
  ports:
    - protocol: TCP
      port: 3000          # Cluster IP port
      targetPort: 3000    # Container port
      nodePort: 32000     # Exposed NodePort (30000–32767)
