gitea/k8s-manual/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gitea.bansikah.com
spec:
  ingressClassName: nginx
  rules:
    - host: gitea.bansikah.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-service
                port:
                  number: 3000
